Update solvency process with refund
